---
source: src/importer/ptb/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="syntax::cat" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k4" for="node" attr.name="default_ns::pos" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k6" for="node" attr.name="annis::tok-whitespace-before" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="brackets_in_value">
            <data key="k3">corpus</data>
        </node>
        <node id="brackets_in_value/doc1">
            <data key="k3">corpus</data>
            <data key="k1">doc1</data>
        </node>
        <node id="brackets_in_value/doc1#text">
            <data key="k3">datasource</data>
        </node>
        <node id="brackets_in_value/doc1#n1">
            <data key="k3">node</data>
            <data key="k0">P</data>
            <data key="k2">syntax</data>
        </node>
        <node id="brackets_in_value/doc1#t1">
            <data key="k3">node</data>
            <data key="k2">default_layer</data>
            <data key="k5">(</data>
            <data key="k4">PUNCT</data>
        </node>
        <node id="brackets_in_value/doc1#t2">
            <data key="k3">node</data>
            <data key="k2">default_layer</data>
            <data key="k5">-RRB-</data>
            <data key="k4">NOUN</data>
            <data key="k6"> </data>
        </node>
        <node id="brackets_in_value/doc1#t3">
            <data key="k3">node</data>
            <data key="k2">default_layer</data>
            <data key="k5">)</data>
            <data key="k4">PUNCT</data>
            <data key="k6"> </data>
        </node>
        <edge id="e0" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t1" label="Dominance/syntax/">
        </edge>
        <edge id="e1" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t2" label="Dominance/syntax/">
        </edge>
        <edge id="e2" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t3" label="Dominance/syntax/">
        </edge>
        <edge id="e3" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t1" label="Dominance/syntax/edge">
        </edge>
        <edge id="e4" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t2" label="Dominance/syntax/edge">
        </edge>
        <edge id="e5" source="brackets_in_value/doc1#n1" target="brackets_in_value/doc1#t3" label="Dominance/syntax/edge">
        </edge>
        <edge id="e6" source="brackets_in_value/doc1#t2" target="brackets_in_value/doc1#t3" label="Ordering/annis/">
        </edge>
        <edge id="e7" source="brackets_in_value/doc1#t1" target="brackets_in_value/doc1#t2" label="Ordering/annis/">
        </edge>
        <edge id="e8" source="brackets_in_value/doc1#t2" target="brackets_in_value/doc1#text" label="PartOf/annis/">
        </edge>
        <edge id="e9" source="brackets_in_value/doc1#text" target="brackets_in_value/doc1" label="PartOf/annis/">
        </edge>
        <edge id="e10" source="brackets_in_value/doc1#t1" target="brackets_in_value/doc1#text" label="PartOf/annis/">
        </edge>
        <edge id="e11" source="brackets_in_value/doc1" target="brackets_in_value" label="PartOf/annis/">
        </edge>
        <edge id="e12" source="brackets_in_value/doc1#t3" target="brackets_in_value/doc1#text" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
